2004-12-14 21:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: Added code in pasteInSelection to prevent
	the user from pasting a subclass onto FirstResponder.

2004-12-14 06:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: Further correction to previous issue.

2004-12-14 06:30 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: Corrected potential issue after delete
	of a class which is selected.

2004-12-14 06:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: Added code in -deleteSelection to copy the 
	selection, if it's a class, added code in copySelection and 
	pasteInSelection to handle copy/paste.
	* GormClassManager.h: Made variable names conform a little more to 
	standard practice.  Also changed the declarations of "NSArray*" to 
	"NSArray *".
	* GormClassManager.m: Corrected addClass:withSuperClassNamed:actions:
	outlets: to eliminate duplicate actions, outlets from the class being
	added if they exist on the superclass.
	* Gorm.m: Changed coercion to id<IBSelectionEditors,IBEditors) in
	the methods which handle copy, paste, delete, etc.
	* TODO: Added more items scheduled for 1.0 release.

2004-12-12 20:55 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.h: Added declaration for windowAndRect:forObject:
	* GormLib/IBDocuments.h: Removed the declaration for 
	windowAndRect:forObject: from here as it doesn't belong in the
	IBDocuments protocol.
	* GormLib/IBPalette.m: Started implementing the private class
	IBPaletteDocument. 
	* Gorm.m: Changed some code due to to switch in location of the
	windowAndRect:forObject: method from IBDocuments.h to 
	GormDocument.h.

2004-12-12 16:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/GNUmakefile: Added new header files.
	* GormLib/IBViewAdditions.h: Creates a category/informal protocol.
	* GormLib/IBViewProtocol.h: New file defines IBViewProtocol